--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
 			<nav id="sq-site-navigation" class="sq-main-navigation">
 				<div class="sq-menu sq-clearfix"><ul>
-<li class="page_item page-item-2"><a href="/">ANA SAYFA</a></li>
-<li class="page_item page-item-48 current_page_item"><a href="/canwebdesign/">CAN WEB DESIGN</a></li>
-<li class="page_item page-item-99"><a href="/iletisim/">İLETİŞİM</a></li>
+<li class="page_item page-item-2"><a href="https://cangokceaslan.com/">ANA SAYFA</a></li>
+<li class="page_item page-item-48 current_page_item"><a href="https://cangokceslan.com/canwebdesign/">CAN WEB DESIGN</a></li>
+<li class="page_item page-item-99"><a href="https://cangokceaslan.com/iletisim/">İLETİŞİM</a></li>
 </ul></div>
 			</nav><!-- #site-navigation -->
 		</div>
