--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<nav id="sq-site-navigation" class="sq-main-navigation">
 				<div class="sq-menu sq-clearfix"><ul>
 <li class="page_item page-item-2"><a href="https://cangokceaslan.com/">ANA SAYFA</a></li>
-<li class="page_item page-item-48 current_page_item"><a href="https://cangokceslan.com/canwebdesign/">CAN WEB DESIGN</a></li>
+<li class="page_item page-item-48 current_page_item"><a href="/">CAN WEB DESIGN</a></li>
 <li class="page_item page-item-99"><a href="https://cangokceaslan.com/iletisim/">İLETİŞİM</a></li>
 </ul></div>
 			</nav><!-- #site-navigation -->
@@ -435,7 +435,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 			<div class="sq-container sq-clearfix">
 				<div class="sq-site-info">
 					©2018 CAN GÖKÇEASLAN					<span class="sep"> | </span>
-					 <a target="_blank" href="/canwebdesign">CAN WEB DESIGN</a>  				</div>
+					 <a target="_blank" href="https://cangokceaslan.com/canwebdesign">CAN WEB DESIGN</a>  				</div>
 
 				<div class="sq-site-social">
 				<a class="sq-facebook" href="https://facebook.com/cangokceaslan" target="_blank"><i class="fa fa-facebook"></i></a><a class="sq-twitter" href="https://twitter.com/cangokceaslan" target="_blank"><i class="fa fa-twitter"></i></a><a class="sq-linkedin" href="https://linkedin.com/in/cangokceaslan" target="_blank"><i class="fa fa-linkedin"></i></a><a class="sq-instagram" href="https://instagram.com/cangokceaslan" target="_blank"><i class="fa fa-instagram"></i></a>				</div>
